Apply code review of the publication work
- Test both new integration tests through the production source client
  and WireMock, per ADR 0004, rather than a hand-rolled client.
- Record the headline coverage period and approximated election on the
  publication, so a default surface is resolved rather than sorted, and
  an unknown one is an invalid filter rather than an unknown publication.
- Validate the coverage-period filter on polls and the download, declare
  the resolved period, and carry translated labels so the two languages
  are two representations.
- Derive an asset version from what is already stored and refuse to
  overwrite a published file.
- Keep publication metadata to the frozen model-run block; read every
  publication row through PublicationStore; inject Roster.